--- a/.github/workflows/azureFrontEnd.yml
+++ b/.github/workflows/azureFrontEnd.yml
@@ -46,3 +46,9 @@ jobs:
     - name: add process.json
       run: |
         echo '{ script: "serve", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> frontend/dist/process.json
+    - name: 'Deploy to Azure WebApp'
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}        
